--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/horiastere/restaurant-component-api#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0"
